<resources>
    <string name="app_name">MiDNI QR Verifier</string>
    <string name="scan_button">Leer QR MIDNI con la cámara</string>
    <string name="status_idle">Seleccione el método de lectura</string>
    <string name="status_no_camera">No se ha detectado ninguna camara en el dispositivo.</string>
    <string name="hid_button">Leer QR MIDNI con emulación teclado HID</string>
    <string name="hid_button_listening">Esperando datos USB…</string>
    <string name="hid_preview_title">Datos recibidos (Teclado HID)</string>
    <string name="hid_check_button">Comprobar</string>
    <string name="hid_cancel_button">Cancelar</string>
    <string name="serial_button">Leer QR MIDNI con puerto serie virtual USB</string>
    <string name="serial_button_listening">Esperando datos serie…</string>
    <string name="serial_preview_title">Datos recibidos (Puerto Serie USB)</string>
    <string name="cancel_all_button">Cancelar todo y reiniciar app</string>
    <string name="status_restarting">Reiniciando app...</string>
</resources>
